kube/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api-gateway
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/redis-cluster-compose: "true"
        io.kompose.service: api-gateway
    spec:
      containers:
      - image: yogeshch/gatewayservice
        imagePullPolicy: ""
        name: api-gateway
        ports:
        - containerPort: 9090
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
