kube/eureka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: eureka
  name: eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: eureka
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/redis-cluster-compose: "true"
        io.kompose.service: eureka
    spec:
      containers:
      - image: yogeshch/eurekaserver
        imagePullPolicy: ""
        name: eureka
        ports:
        - containerPort: 8761
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
