kube/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
spec:
  ports:
  - name: "9090"
    port: 9090
    targetPort: 9090
  type: NodePort   
  selector:
    io.kompose.service: api-gateway
status:
  loadBalancer: {}
