kube/eureka-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: eureka
  name: eureka
spec:
  ports:
  - name: "8761"
    port: 8761
    targetPort: 8761
  type: NodePort  
  selector:
    io.kompose.service: eureka
status:
  loadBalancer: {}
